cabal-version: 2.4
name: reactive-platformer
version: 0.1.0.0
author: Lira Kraamwinkel

executable reactive-platformer
    main-is: Main.hs
    other-modules: Sdl, Player, EventNetwork, Event, Sprite
    build-depends:
        base ^>=4.16.4.0
        ,sdl2 ==2.5.4.0
        ,sdl2-image ==2.1.0.0
        ,reactive-banana ==1.3.2.0
        ,linear ==1.22
        ,StateVar ==1.2.2
        ,containers ==0.6.5.1
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions: OverloadedStrings, OverloadedRecordDot
    ghc-options: -Wno-tabs
